--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="Default">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta
+    <!--<meta
       name="keywords"
       content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"
-    />
-    <meta name="description" content="" />
+    />-->
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+      name="description"
+      content="Site web de l'agence La chouette agence qui souhaite aider les entreprises de la région Lyonnaise à se développer et à connaître le succès."
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="google-site-verification"
       content="39ro4SsnwTtyOF4ANi2qi7jp_uOKLw4sJYygEkfNiKY"
@@ -19,16 +19,16 @@
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" defer/>
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
     <script src="./js/jquery-2.1.0.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/blocs.js"></script>
-    <script src="./js/jquery.touchSwipe.js" defer></script>
+    <script src="./js/jquery.touchSwipe.js"></script>
     <script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La chouette agence</title>
 
     <!-- Analytics -->
 
@@ -42,20 +42,20 @@
         <div class="container bloc-sm">
           <nav class="navbar row">
             <div class="navbar-header">
-              <div class="keywords" style="color: #cccccc; font-size: 1px">
+              <!--<div class="keywords" style="color: #cccccc; font-size: 1px">
                 Agence web à paris, stratégie web, web design, illustrations,
                 design de site web, site web, web, internet, site internet, site
-              </div>
+              </div>-->
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/la-chouette-agence.png"
-                  alt="paris web design logo agence web meilleure agence"
+                  alt="Logo et titre de la chouette agence"
                   height="40"
               /></a>
-              <div class="keywords" style="color: #cccccc; font-size: 1px">
+              <!--<div class="keywords" style="color: #cccccc; font-size: 1px">
                 Agence web à paris, stratégie web, web design, illustrations,
                 design de site web, site web, web, internet, site internet, site
-              </div>
+              </div>-->
               <button
                 id="nav-toggle"
                 type="button"
@@ -71,11 +71,11 @@
             <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
               <ul class="site-navigation nav navbar-nav">
                 <li>
-                  <a href="index.html">Accueil</a>
+                  <a href="#">Accueil</a>
                 </li>
                 <li></li>
                 <li>
-                  <a href="page2.html">page2 &gt;</a>
+                  <a href="page2.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -86,7 +86,16 @@
 
       <!-- bloc-1-presentation -->
       <div
-        class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+        class="
+          bloc
+          bgc-dark-slate-blue
+          bg-banniere
+          d-bloc
+          bg-t-edge
+          bloc-bg-texture
+          texture-paper
+          b-parallax
+        "
         id="bloc-1-hero"
       >
         <div class="container bloc-lg">
@@ -96,18 +105,22 @@
                 src="img/logo.png"
                 class="center-block image-resize-mode"
                 width="100"
-                alt="La chouette agence, agence web paris, création logo paris"
+                alt="Logo de la chouette agence"
               />
-              <h1 class="text-center hero-bloc-text tc-white">
-                La chouette agence.
+              <h1 class="text-center hero-bloc-text tc-orange">
+                Optez pour un design qui vous ressemble.
               </h1>
               <div class="text-center">
-                <a
+                <!--<a
                   href="page2.html"
-                  class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+                  class="
+                    btn btn-lg btn-clean btn-rd
+                    cta-hero
+                    btn-atomic-tangerine
+                  "
                   id="cta-hero"
                   >Contact</a
-                >
+                >-->
               </div>
             </div>
           </div>
@@ -120,17 +133,27 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img
+              <!--<img
                 alt="agence web, agence web paris, web design paris, stratégie web"
                 src="img/title.png"
-              />
+              />-->
+              <h2>
+                La chouette agence est une agence de web design qui aide les
+                entreprises à devenir attractives et visibles sur Internet.
+              </h2>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
             <div class="col-sm-4">
               <div class="text-center">
                 <span
-                  class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"
+                  class="
+                    et-icon-browser
+                    sm-shadow
+                    icon-dark-slate-blue
+                    icons
+                    icon-lg
+                  "
                 ></span>
               </div>
               <h3 class="mg-md text-center">Web design</h3>
@@ -143,7 +166,13 @@
             <div class="col-sm-4">
               <div class="text-center">
                 <span
-                  class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"
+                  class="
+                    et-icon-presentation
+                    sm-shadow
+                    icon-dark-slate-blue
+                    icons
+                    icon-lg
+                  "
                 ></span>
               </div>
               <h3 class="mg-md text-center">&nbsp;Stratégie</h3>
@@ -156,7 +185,13 @@
             <div class="col-sm-4">
               <div class="text-center">
                 <span
-                  class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"
+                  class="
+                    et-icon-edit
+                    sm-shadow
+                    icon-dark-slate-blue
+                    icons
+                    icon-lg
+                  "
                 ></span>
               </div>
               <h3 class="mg-md text-center">Illustrations</h3>
@@ -169,10 +204,19 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <img
+              <!--<img
                 alt="agence web, agence web paris, web design paris, stratégie web"
                 src="img/citation.png"
-              />
+              />-->
+              <h2>
+                "La chouette agence est une excellente agence web ! Les web
+                designers ont réussi à capturer l'essence de notre entreprise et
+                à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes
+                en ligne à Lyon."
+              </h2>
+              <p class="text-center">
+                Maxime Guibard, PDG de A vos fourchettes.
+              </p>
             </div>
           </div>
         </div>
@@ -181,7 +225,16 @@
 
       <!-- bloc-3-what-i-do -->
       <div
-        class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+        class="
+          bloc
+          tc-white
+          bgc-atomic-tangerine
+          bg-presentation
+          d-bloc
+          bloc-bg-texture
+          texture-paper
+          b-parallax
+        "
         id="bloc-3-what-i-do"
       >
         <div class="container bloc-lg">
@@ -200,9 +253,9 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="page2.html"
+                <br /><br /><!--<a class="ltc-white bold-link" href="page2.html"
                   >Contactez notre équipe</a
-                ><br />
+                ><br />-->
               </p>
             </div>
           </div>
@@ -270,12 +323,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/3.bmp"
+                data-lightbox="img/3.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/3.bmp"
+                  src="img/3.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
               /></a>
@@ -290,12 +343,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/4.bmp"
+                data-lightbox="img/4.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.bmp"
+                  src="img/4.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
               /></a>
@@ -315,7 +368,14 @@
 
       <!-- bloc-5-cta -->
       <div
-        class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper"
+        class="
+          bloc
+          bgc-dark-slate-blue
+          bg-banniere
+          d-bloc
+          bloc-bg-texture
+          texture-paper
+        "
         id="bloc-5-cta"
       >
         <div class="container bloc-lg">
@@ -327,7 +387,10 @@
             <div class="col-sm-12 text-center">
               <a
                 href="page2.html"
-                class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
+                class="
+                  btn btn-atomic-tangerine btn-clean btn-rd btn-lg
+                  cta-hero
+                "
                 >Contact</a
               >
             </div>
@@ -347,39 +410,39 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="https://twitter.com/" aria-label="twitter"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="https://www.facebook.com/" aria-label="facebook"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="https://dribbble.com/" aria-label="dribbble"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="https://www.instagram.com/" aria-label="instagram"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
                 </div>
-                <div class="keywords" style="color: #f3976c">
+               <!--<div class="keywords" style="color: #f3976c">
                   Agence web à paris, stratégie web, web design, illustrations,
                   design de site web, site web, web, internet, site internet,
                   site
-                </div>
+                </div>-->
               </div>
-              <div class="row">
+              <!--<div class="row">
                 <div class="col-sm-4">
                   Partenaires
                   <ul>
@@ -433,7 +496,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
       <!-- Footer - bloc-8 END -->
     </div>
     <!-- Principal conteneur END -->
