Fixing some alt texts

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 alt="agence web, agence web paris, web design paris, stratégie web"
                 src="img/citation.png"
               />-->
-              <h2>
+              <p class="p-citation">
                 "La chouette agence est une excellente agence web ! Les web
                 designers ont réussi à capturer l'essence de notre entreprise et
                 à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes
@@ -271,10 +271,13 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img
+              <!--<img
                 alt="agence web, agence web paris, web design paris, stratégie web"
                 src="img/title2.png"
-              />
+              />-->
+              <h2>
+                Nous travaillons avec beaucoup de clients, voici nos réalisations.
+              </h2>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
@@ -287,7 +290,7 @@
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.jpg"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                  alt="Pile de livres"
                   class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">
@@ -308,7 +311,7 @@
                 ><img
                   src="img/2.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
+                  alt="Femme photographe"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -330,7 +333,7 @@
                 ><img
                   src="img/3.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
+                  alt="Matériel informatique et photographe"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -350,7 +353,7 @@
                 ><img
                   src="img/4.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
+                  alt="Personne utilisant un ordinateur portable"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
