--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" defer/>
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
     <script src="./js/jquery-2.1.0.js"></script>
@@ -208,12 +208,12 @@
                 alt="agence web, agence web paris, web design paris, stratégie web"
                 src="img/citation.png"
               />-->
-              <h2>
+              <p class="p-citation">
                 "La chouette agence est une excellente agence web ! Les web
                 designers ont réussi à capturer l'essence de notre entreprise et
                 à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes
                 en ligne à Lyon."
-              </h2>
+              </p>
               <p class="text-center">
                 Maxime Guibard, PDG de A vos fourchettes.
               </p>
@@ -276,7 +276,8 @@
                 src="img/title2.png"
               />-->
               <h2>
-                Nous travaillons avec beaucoup de clients, voici nos réalisations.
+                Nous travaillons avec beaucoup de clients, voici nos
+                réalisations.
               </h2>
             </div>
           </div>
@@ -413,33 +414,45 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://twitter.com/" aria-label="twitter"
+                    <a
+                      class="social"
+                      href="https://twitter.com/"
+                      aria-label="twitter"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://www.facebook.com/" aria-label="facebook"
+                    <a
+                      class="social"
+                      href="https://www.facebook.com/"
+                      aria-label="facebook"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://dribbble.com/" aria-label="dribbble"
+                    <a
+                      class="social"
+                      href="https://dribbble.com/"
+                      aria-label="dribbble"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://www.instagram.com/" aria-label="instagram"
+                    <a
+                      class="social"
+                      href="https://www.instagram.com/"
+                      aria-label="instagram"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
                 </div>
-               <!--<div class="keywords" style="color: #f3976c">
+                <!--<div class="keywords" style="color: #f3976c">
                   Agence web à paris, stratégie web, web design, illustrations,
                   design de site web, site web, web, internet, site internet,
                   site
@@ -500,8 +513,12 @@
           </div>
         </div>
       </div>-->
-      <!-- Footer - bloc-8 END -->
+              <!-- Footer - bloc-8 END -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Principal conteneur END -->
     </div>
-    <!-- Principal conteneur END -->
   </body>
 </html>
