--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <!--<meta
-      name="keywords"
-      content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"
-    />-->
     <meta
       name="description"
       content="Site web de l'agence La chouette agence qui souhaite aider les entreprises de la région Lyonnaise à se développer et à connaître le succès."
@@ -42,20 +38,12 @@
         <div class="container bloc-sm">
           <nav class="navbar row">
             <div class="navbar-header">
-              <!--<div class="keywords" style="color: #cccccc; font-size: 1px">
-                Agence web à paris, stratégie web, web design, illustrations,
-                design de site web, site web, web, internet, site internet, site
-              </div>-->
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/la-chouette-agence.png"
                   alt="Logo et titre de la chouette agence"
                   height="40"
               /></a>
-              <!--<div class="keywords" style="color: #cccccc; font-size: 1px">
-                Agence web à paris, stratégie web, web design, illustrations,
-                design de site web, site web, web, internet, site internet, site
-              </div>-->
               <button
                 id="nav-toggle"
                 type="button"
@@ -110,18 +98,7 @@
               <h1 class="text-center hero-bloc-text tc-orange">
                 Optez pour un design qui vous ressemble.
               </h1>
-              <div class="text-center">
-                <!--<a
-                  href="page2.html"
-                  class="
-                    btn btn-lg btn-clean btn-rd
-                    cta-hero
-                    btn-atomic-tangerine
-                  "
-                  id="cta-hero"
-                  >Contact</a
-                >-->
-              </div>
+              <div class="text-center"></div>
             </div>
           </div>
         </div>
@@ -133,10 +110,6 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <!--<img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/title.png"
-              />-->
               <h2>
                 La chouette agence est une agence de web design qui aide les
                 entreprises à devenir attractives et visibles sur Internet.
@@ -204,10 +177,6 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <!--<img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/citation.png"
-              />-->
               <p class="p-citation">
                 "La chouette agence est une excellente agence web ! Les web
                 designers ont réussi à capturer l'essence de notre entreprise et
@@ -253,9 +222,7 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><!--<a class="ltc-white bold-link" href="page2.html"
-                  >Contactez notre équipe</a
-                ><br />-->
+                <br /><br />
               </p>
             </div>
           </div>
@@ -271,10 +238,6 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <!--<img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/title2.png"
-              />-->
               <h2>
                 Nous travaillons avec beaucoup de clients, voici nos
                 réalisations.
@@ -452,67 +415,7 @@
                     ></a>
                   </div>
                 </div>
-                <!--<div class="keywords" style="color: #f3976c">
-                  Agence web à paris, stratégie web, web design, illustrations,
-                  design de site web, site web, web, internet, site internet,
-                  site
-                </div>-->
               </div>
-              <!--<div class="row">
-                <div class="col-sm-4">
-                  Partenaires
-                  <ul>
-                    <li><a href="voiture.com">voiture.com</a></li>
-                    <li><a href="pizza.com">pizza.com</a></li>
-                    <li><a href="matoiture.com">matoiture.com</a></li>
-                    <li><a href="immobilierseo.com">immobilierseo.com</a></li>
-                  </ul>
-                </div>
-                <div class="col-sm-4">
-                  Annuaires liste 1
-                  <ul>
-                    <li><a href="annuaireagence.com">annuaireagence.com</a></li>
-                    <li><a href="annuaireseo.com">annuaireseo.com</a></li>
-                    <li>
-                      <a href="annuairemarketing.com">annuairemarketing.com</a>
-                    </li>
-                    <li><a href="123seoture.com">123seo.com</a></li>
-                    <li><a href="123site.com">123site.com</a></li>
-                    <li>
-                      <a href="annuairewordpress.com">annuairewordpress.com</a>
-                    </li>
-                    <li><a href="listeagence.com">listeagence.com</a></li>
-                    <li>
-                      <a href="meilleuresagencesparis.com"
-                        >meilleuresagencesparis.com</a
-                      >
-                    </li>
-                    <li><a href="listeseo.com">listeseo.com</a></li>
-                  </ul>
-                </div>
-                <div class="col-sm-4">
-                  Annuaires liste 2
-                  <ul>
-                    <li><a href="betterseo.com">betterseo.com</a></li>
-                    <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-                    <li><a href="seojuicelien.com">seojuicelien.com</a></li>
-                    <li><a href="meilleursliens.com">meilleursliens.com</a></li>
-                    <li><a href="liensagogo.com">liensagogo.com</a></li>
-                    <li><a href="backlink.com">backlink.com</a></li>
-                    <li>
-                      <a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a>
-                    </li>
-                    <li>
-                      <a href="remontersurgoogle.com">remontersurgoogle.com</a>
-                    </li>
-                    <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>-->
               <!-- Footer - bloc-8 END -->
             </div>
           </div>
